# MAVSDK

examples/takeoff_and_land/: CMakeLists.txt  takeoff_and_land.cpp  tflite_client.cpp
